--- a/ronet/msvc2009/ronet_dll.vcproj
+++ b/ronet/msvc2009/ronet_dll.vcproj
@@ -241,7 +241,7 @@
 					>
 				</File>
 				<File
-					RelativePath="..\pkt_charcreated.cc"
+					RelativePath="..\packets\pkt_charcreated.cc"
 					>
 				</File>
 				<File
