--- a/roengine/msvc9/roengine.vcproj
+++ b/roengine/msvc9/roengine.vcproj
@@ -471,6 +471,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\gui\font.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\gui\glf_font.cc"
 				>
 			</File>
