--- a/roengine/msvc9/roengine.vcproj
+++ b/roengine/msvc9/roengine.vcproj
@@ -463,6 +463,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\gui\dialog.cc"
+				>
+			</File>
+			<File
 				RelativePath="..\gui\element.cc"
 				>
 			</File>
@@ -523,6 +527,10 @@
 				</File>
 				<File
 					RelativePath="..\include\roengine\gui\desktop.h"
+					>
+				</File>
+				<File
+					RelativePath="..\include\roengine\gui\dialog.h"
 					>
 				</File>
 				<File
