[RSM_View] New dependency: SDL_ttf Command the object using the keyboard (rotation and position).

--- a/rsm_view/msvc2008/rsm_view.vcproj
+++ b/rsm_view/msvc2008/rsm_view.vcproj
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="sdlmain.lib sdl.lib"
+				AdditionalDependencies="sdlmain.lib sdl.lib sdl_ttf.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;$(SDL)\lib&quot;"
 				GenerateDebugInformation="true"
@@ -133,7 +133,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="$(NoInherit)"
+				AdditionalDependencies="sdlmain.lib sdl.lib sdl_ttf.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(OutDir)&quot;;&quot;$(SDL)\lib&quot;"
 				GenerateDebugInformation="true"
